--- a/web/reader.html
+++ b/web/reader.html
@@ -210,7 +210,7 @@
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-<!--<script src="reader.js"></script>-->
+<script src="reader.js"></script>
 
 <!-- Page-Level Scripts -->
 <script>
