--- a/web/editor.html
+++ b/web/editor.html
@@ -102,6 +102,10 @@
             </div>
         </div>
         <div class="wrapper wrapper-content" >
+            <form class="m-t" role="form" id="filemassage">
+                <h3 class="text-danger">上传封面图片</h3>
+                <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
+            </form>
             <form class="m-t" role="form" id="editormassage">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
@@ -111,11 +115,13 @@
                             <select class="form-control" style="width: 10%" v-model="cid" @change="getColumnSelected"> 
                                 <option :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
                             </select>
-                        </div>  
-                        <div class="col-lg-offset-4">
-                            <h3 class="text-danger">上传封面图片</h3>
-                            <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
                         </div>
+
+                        <!--<div class="col-lg-offset-4">-->
+                            <!--<h3 class="text-danger">上传封面图片</h3>-->
+                            <!--<input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">-->
+                        <!--</div>-->
+
                         <div class="ibox-content no-padding">
                             <div class="summernote"  name="content" id="content"><h3>在此进行编辑你的文章</h3></div>
                         </div>
@@ -166,8 +172,8 @@
 
     $("#uploadfile").fileinput({
         language: 'zh', //设置语言
-        uploadUrl: "./editor/pic.json", //上传的地址(访问接口地址)
-        allowedFileExtensions: ['jpg', 'png'],//接收的文件后缀
+        uploadUrl: "http://localhost:10080/editor/pic.json", //上传的地址(访问接口地址)
+        allowedFileExtensions: ['jpg', 'png' , 'jpeg'],//接收的文件后缀
         //uploadExtraData:{"id": 1, "fileName":'123.mp3'},
         uploadAsync: true, //默认异步上传
         showUpload: true, //是否显示上传按钮
