--- a/classes/artifacts/news_release_system_war_exploded/editor.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor.html
@@ -102,6 +102,21 @@
             </div>
         </div>
         <div class="wrapper wrapper-content" >
+
+            <form class="m-t" role="form" id="filemassage">
+                <div class="col-lg-12">
+                    <div class="ibox float-e-margins">
+                        <h3 class="text-danger">上传封面图片</h3>
+                        <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
+                    </div>
+                </div>
+            </form>
+
+            <form>
+                <input type="file" onchange="getFile()">
+                <button type="button" class="button button-primary button-pill button-small" onclick="submit()">提交</button>
+            </form>
+
             <form class="m-t" role="form" id="editormassage">
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
@@ -112,10 +127,10 @@
                                 <option :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
                             </select>
                         </div>  
-                        <div class="col-lg-offset-4">
-                            <h3 class="text-danger">上传封面图片</h3>
-                            <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
-                        </div>
+                        <!--<div>-->
+                            <!--<h3 class="text-danger">上传封面图片</h3>-->
+                            <!--<input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">-->
+                        <!--</div>-->
                         <div class="ibox-content no-padding">
                             <div class="summernote"  name="content" id="content"><h3>在此进行编辑你的文章</h3></div>
                         </div>
@@ -166,8 +181,8 @@
 
     $("#uploadfile").fileinput({
         language: 'zh', //设置语言
-        uploadUrl: "./editor/pic.json", //上传的地址(访问接口地址)
-        allowedFileExtensions: ['jpg', 'png'],//接收的文件后缀
+        uploadUrl: "localhost:10080/editor/uploadpicture", //上传的地址(访问接口地址)
+        allowedFileExtensions: ['jpg', 'png','jpeg'],//接收的文件后缀
         //uploadExtraData:{"id": 1, "fileName":'123.mp3'},
         uploadAsync: true, //默认异步上传
         showUpload: true, //是否显示上传按钮
@@ -181,7 +196,7 @@
         // maxImageWidth: 1000,//图片的最大宽度
         // maxImageHeight: 1000,//图片的最大高度
         //maxFileSize: 0,//单位为kb，如果为0表示不限制文件大小
-        maxFileCount: 1, //表示允许同时上传的最大文件个数
+        maxFileCount: 10, //表示允许同时上传的最大文件个数
         enctype: 'multipart/form-data',
         validateInitialCount:true,
         previewFileIcon: "<i class='glyphicon glyphicon-king'></i>",
@@ -190,5 +205,4 @@
 </script>
 
 </body>
-
 </html>
