--- a/web/reader.html
+++ b/web/reader.html
@@ -123,26 +123,26 @@
                     </ol>
 
                     <!-- Wrapper for slides -->
-                    <div class="carousel-inner">
+                    <div class="carousel-inner" id="images">
                         <div class="item active">
                             <a href="index.html">
-                                <img src="img/p3.jpg" class="img img-responsive" alt="First slide">
+                                <img v-bind:src="articlesWithPic[0].pic" class="img img-responsive" alt="First slide">
                             </a>
-                            <div class="carousel-caption">标题 3</div>
+                            <div class="carousel-caption" v-text="articlesWithPic[0].title"></div>
                         </div>
 
                         <div class="item">
                             <a href="index.html">
-                                <img src="img/p3.jpg" class="img img-responsive" alt="Second slide">
+                                <img v-bind:src="articlesWithPic[1].pic" class="img img-responsive" alt="Second slide">
                             </a>
-                            <div class="carousel-caption">标题 3</div>
+                            <div class="carousel-caption" v-text="articlesWithPic[1].title"></div>
                         </div>
 
                         <div class="item">
                             <a href="index.html">
-                                <img src="img/p4.jpg" class="img img-responsive" alt="Third slide">
+                                <img v-bind:src="articlesWithPic[2].pic" class="img img-responsive" alt="Third slide">
                             </a>
-                            <div class="carousel-caption">标题 3</div>
+                            <div class="carousel-caption" v-text="articlesWithPic[2].title"></div>
                         </div>
                     </div>
 
