--- a/web/editor.html
+++ b/web/editor.html
@@ -125,10 +125,10 @@
                 </div>
                 <div class="row center-block">
                     <div class="col-lg-1 col-lg-offset-5">
-                        <button type="button" class="btn btn-primary block full-width m-b" onclick="save()">保存</button>
+                        <button type="button" class="btn btn-primary block full-width m-b" onclick="save('saved')">保存</button>
                     </div>
                     <div class="col-lg-1">
-                        <button type="button" class="btn btn-primary block full-width m-b" onclick="upload()">上传</button>
+                        <button type="button" class="btn btn-primary block full-width m-b" onclick="save('published')">上传</button>
                     </div>
                 </div>
             </form>
