--- a/web/reader.html
+++ b/web/reader.html
@@ -124,26 +124,24 @@
 
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner" id="images">
-                        <div class="item active">
-                            <a href="index.html">
-                                <img v-bind:src="articlesWithPic[0].pic" class="img img-responsive" alt="First slide">
-                            </a>
-                            <div class="carousel-caption" v-text="articlesWithPic[0].title"></div>
-                        </div>
+                        <!--<div class="item active" v-for="article in articlesWithPic">-->
+                                <!--<img  v-bind:src="'http://localhost:10080/article/picture/'+article.aid" class="img img-responsive" alt="First slide">-->
+                            <!--<div class="carousel-caption" v-text="article.title"></div>-->
+                        <!--</div>-->
 
-                        <div class="item">
-                            <a href="index.html">
-                                <img v-bind:src="articlesWithPic[1].pic" class="img img-responsive" alt="Second slide">
-                            </a>
-                            <div class="carousel-caption" v-text="articlesWithPic[1].title"></div>
-                        </div>
+                        <!--<div class="item">-->
+                            <!--<a href="index.html">-->
+                                <!--<img v-bind:src="articlesWithPic[1].pic" class="img img-responsive" alt="Second slide">-->
+                            <!--</a>-->
+                            <!--<div class="carousel-caption" v-text="articlesWithPic[1].title"></div>-->
+                        <!--</div>-->
 
-                        <div class="item">
-                            <a href="index.html">
-                                <img v-bind:src="articlesWithPic[2].pic" class="img img-responsive" alt="Third slide">
-                            </a>
-                            <div class="carousel-caption" v-text="articlesWithPic[2].title"></div>
-                        </div>
+                        <!--<div class="item">-->
+                            <!--<a href="index.html">-->
+                                <!--<img v-bind:src="articlesWithPic[2].pic" class="img img-responsive" alt="Third slide">-->
+                            <!--</a>-->
+                            <!--<div class="carousel-caption" v-text="articlesWithPic[2].title"></div>-->
+                        <!--</div>-->
                     </div>
 
                     <!-- Controls -->
