--- a/web/editor.html
+++ b/web/editor.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html>
-
 <head>
 
     <meta charset="utf-8">
@@ -107,10 +105,10 @@
                 <div class="col-lg-12">
                     <div class="ibox float-e-margins">
                         <div class="ibox-title" style="height: 150px">
-                            <h3 class="text-warning">文章标题:</h3><input placeholder="请输入你的标题" name="title" id="atitle">
-                            <h3 class="text-success">栏目类型</h3>
+                            <h3 class="text-warning">文章标题:</h3><input placeholder="请输入你的标题" name="title" id="title">
+                            <h3 class="text-success" id="column">栏目类型</h3>
                             <select class="form-control" style="width: 10%" v-model="cid" @change="getColumnSelected"> 
-                                <option :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
+                                <option v-bind:selected="cid === column.cid" :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
                             </select>
                         </div>  
                         <div>
