--- a/classes/artifacts/news_release_system_war_exploded/article_manage.html
+++ b/classes/artifacts/news_release_system_war_exploded/article_manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:v-on="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -19,49 +19,6 @@
 <body>
 
 <div id="wrapper">
-
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div class="dropdown profile-element">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">青铜小姐姐</strong>
-                             </span> <span class="text-muted text-xs block">管理员 <b class="caret"></b></span> </span> </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="login.html">登出</a></li>
-                        </ul>
-                    </div>
-                    <div class="logo-element">
-                        IN+
-                    </div>
-                </li>
-                <li >
-                    <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
-                </li>
-                <li>
-                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">栏目管理</span></a>
-                </li>
-                <li class="active">
-                    <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">文章管理</span></a>
-                </li>
-
-                <li >
-                    <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">文章编辑管理</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="editor.html">文章编辑</a></li>
-                        <li><a href="editor_article_manage.html">文章管理</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="reader.html"><i class="fa fa-desktop"></i> <span class="nav-label">文章浏览</span></a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
@@ -107,7 +64,7 @@
                     <div class="ibox float-e-margins">
 
                         <div class="ibox-content">
-                            <table class="table table-striped">
+                            <table class="table table-striped" id="table">
                                 <thead>
                                 <tr>
                                     <th>文章ID</th>
@@ -119,7 +76,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr v-for="article in articles">
+                                <tr v-for="article in articles" v-on:click="setAid(article.aid)">
                                     <td v-text="article.aid"></td>
                                     <td v-text="article.title"></td>
                                     <td><code v-text="article.cname"></code></td>
@@ -218,11 +175,8 @@
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
 
-<!-- Bootstrap markdown -->
-<script src="js/plugins/bootstrap-markdown/bootstrap-markdown.js"></script>
-<script src="js/plugins/bootstrap-markdown/markdown.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="js/vue.js"></script>
+<script src="navbar.js"></script>
 <script src="article_manage.js"></script>
 
 </body>
