--- a/classes/artifacts/news_release_system_war_exploded/editor.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:v-bind="http://www.w3.org/1999/xhtml">
 <head>
 
     <meta charset="utf-8">
@@ -20,49 +20,6 @@
 <body>
 
 <div id="wrapper">
-
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div class="dropdown profile-element">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">青铜小姐姐</strong>
-                             </span> <span class="text-muted text-xs block">管理员 <b class="caret"></b></span> </span> </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="login.html">登出</a></li>
-                        </ul>
-                    </div>
-                    <div class="logo-element">
-                        IN+
-                    </div>
-                </li>
-                <li >
-                    <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
-                </li>
-                <li>
-                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">栏目管理</span></a>
-                </li>
-                <li>
-                    <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">文章管理</span></a>
-                </li>
-
-                <li class="active">
-                    <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">文章编辑管理</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li class="active"><a href="editor.html">文章编辑</a></li>
-                        <li><a href="editor_article_manage.html">文章管理</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="reader.html"><i class="fa fa-desktop"></i> <span class="nav-label">文章浏览</span></a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
@@ -110,7 +67,10 @@
                             <select class="form-control" style="width: 10%" v-model="cid" @change="getColumnSelected"> 
                                 <option v-bind:selected="cid === column.cid" :value="column.cid" v-for="column in columns" v-text="column.cname"></option>
                             </select>
-                        </div>  
+                        </div>
+                        <div id="image">
+
+                        </div>
                         <div>
                             <h3 class="text-danger">上传封面图片</h3>
                             <input type="file" class="file col-lg-4" id="uploadfile" style="width: 10px;height: 10px">
@@ -146,7 +106,8 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="js/vue.js"></script>
+<script src="navbar.js"></script>
 <script src="editor.js"></script>
 <script src="js/fileinput.min.js"></script>
 <!-- SUMMERNOTE -->
