--- a/classes/artifacts/news_release_system_war_exploded/index.html
+++ b/classes/artifacts/news_release_system_war_exploded/index.html
@@ -8,8 +8,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="css/animate.css" rel="stylesheet">
-    <!--<link href="css/plugins/dropzone/basic.css" rel="stylesheet">-->
-    <!--<link href="css/plugins/dropzone/dropzone.css" rel="stylesheet">-->
     <link href="css/style.css" rel="stylesheet">
 
 
@@ -17,49 +15,6 @@
 <body>
 
 <div id="wrapper">
-
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div class="dropdown profile-element">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">青铜小姐姐</strong>
-                             </span> <span class="text-muted text-xs block">管理员 <b class="caret"></b></span> </span> </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="login.html">登出</a></li>
-                        </ul>
-                    </div>
-                    <div class="logo-element">
-                        IN+
-                    </div>
-                </li>
-                <li class="active">
-                    <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
-                </li>
-                <li v-show="level === 0">
-                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label" >栏目管理</span></a>
-                </li>
-                <li v-show="level === 0">
-                    <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">文章管理</span></a>
-                </li>
-
-                <li v-show="level === 1">
-                    <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">文章编辑管理</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="editor.html">文章编辑</a></li>
-                        <li><a href="editor_article_manage.html">文章管理</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="reader.html"><i class="fa fa-desktop"></i> <span class="nav-label">文章浏览</span></a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
 
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
@@ -132,9 +87,9 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
-<!--<script src="js/plugins/dropzone/dropzone.js"></script>-->
 
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="js/vue.js"></script>
+<script src="navbar.js"></script>
 <script src="index.js"></script>
 
 </body>
