--- a/classes/artifacts/news_release_system_war_exploded/reader.html
+++ b/classes/artifacts/news_release_system_war_exploded/reader.html
@@ -38,50 +38,6 @@
 
 <div id="wrapper">
 
-    <nav class="navbar-default navbar-static-side" role="navigation">
-        <div class="sidebar-collapse">
-            <ul class="nav metismenu" id="side-menu">
-                <li class="nav-header">
-                    <div class="dropdown profile-element">
-                        <a data-toggle="dropdown" class="dropdown-toggle" href="#">
-                            <span class="clear"> <span class="block m-t-xs"> <strong class="font-bold">青铜小姐姐</strong>
-                             </span> <span class="text-muted text-xs block">管理员 <b class="caret"></b></span> </span> </a>
-                        <ul class="dropdown-menu animated fadeInRight m-t-xs">
-                            <li><a href="login.html">登出</a></li>
-                        </ul>
-                    </div>
-                    <div class="logo-element">
-                        IN+
-                    </div>
-                </li>
-                <li >
-                    <a href="hello.html"><i class="fa fa-th-large"></i> <span class="nav-label">主页</span></a>
-                </li>
-                <li>
-                    <a href="column_manage.html"><i class="fa fa-diamond"></i> <span class="nav-label">栏目管理</span></a>
-                </li>
-                <li>
-                    <a href="article_manage.html"><i class="fa fa-magic"></i> <span class="nav-label">文章管理</span></a>
-                </li>
-
-                <li >
-                    <a href="#"><i class="fa fa-files-o"></i> <span class="nav-label">文章编辑管理</span><span class="fa arrow"></span></a>
-                    <ul class="nav nav-second-level collapse">
-                        <li><a href="editor.html">文章编辑</a></li>
-                        <li><a href="editor_article_manage.html">文章管理</a></li>
-                    </ul>
-                </li>
-
-                <li class="active">
-                    <a href="reader.html"><i class="fa fa-desktop"></i> <span class="nav-label">文章浏览</span></a>
-                </li>
-
-            </ul>
-
-        </div>
-    </nav>
-
-
     <div id="page-wrapper" class="gray-bg">
         <div class="row border-bottom">
             <nav class="navbar navbar-static-top" role="navigation" style="margin-bottom: 0">
@@ -127,20 +83,6 @@
                         <!--<div class="item active" v-for="article in articlesWithPic">-->
                                 <!--<img  v-bind:src="'http://localhost:10080/article/picture/'+article.aid" class="img img-responsive" alt="First slide">-->
                             <!--<div class="carousel-caption" v-text="article.title"></div>-->
-                        <!--</div>-->
-
-                        <!--<div class="item">-->
-                            <!--<a href="index.html">-->
-                                <!--<img v-bind:src="articlesWithPic[1].pic" class="img img-responsive" alt="Second slide">-->
-                            <!--</a>-->
-                            <!--<div class="carousel-caption" v-text="articlesWithPic[1].title"></div>-->
-                        <!--</div>-->
-
-                        <!--<div class="item">-->
-                            <!--<a href="index.html">-->
-                                <!--<img v-bind:src="articlesWithPic[2].pic" class="img img-responsive" alt="Third slide">-->
-                            <!--</a>-->
-                            <!--<div class="carousel-caption" v-text="articlesWithPic[2].title"></div>-->
                         <!--</div>-->
                     </div>
 
@@ -206,7 +148,8 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/vue"></script>
+<script src="js/vue.js"></script>
+<script src="navbar.js"></script>
 <script src="reader.js"></script>
 
 <!-- Page-Level Scripts -->
