--- a/web/article_manage.html
+++ b/web/article_manage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:v-on="http://www.w3.org/1999/xhtml">
 
 <head>
 
@@ -64,7 +64,7 @@
                     <div class="ibox float-e-margins">
 
                         <div class="ibox-content">
-                            <table class="table table-striped">
+                            <table class="table table-striped" id="table">
                                 <thead>
                                 <tr>
                                     <th>文章ID</th>
@@ -76,7 +76,7 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr v-for="article in articles">
+                                <tr v-for="article in articles" v-on:click="setAid(article.aid)">
                                     <td v-text="article.aid"></td>
                                     <td v-text="article.title"></td>
                                     <td><code v-text="article.cname"></code></td>
@@ -174,10 +174,6 @@
 <!-- Custom and plugin javascript -->
 <script src="js/inspinia.js"></script>
 <script src="js/plugins/pace/pace.min.js"></script>
-
-<!-- Bootstrap markdown -->
-<script src="js/plugins/bootstrap-markdown/bootstrap-markdown.js"></script>
-<script src="js/plugins/bootstrap-markdown/markdown.js"></script>
 
 <script src="js/vue.js"></script>
 <script src="navbar.js"></script>
