--- a/web/editor_article_manage.html
+++ b/web/editor_article_manage.html
@@ -84,7 +84,7 @@
                                     <td>
                                         <div class="center-block">
                                             <button class="btn btn-default" data-toggle="modal" data-target="#publishModal" v-bind:data-aid="article.aid" v-show="article.state !== 'published'">上传</button>
-                                            <a class="btn btn-default"  v-on:click="getaid(article.aid)" href="editor.html" >编辑</a>
+                                            <a class="btn btn-default"  v-on:click="setAid(article.aid)" href="editor.html" >编辑</a>
 
                                             <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal"  v-bind:data-aid="article.aid" >删除</button>
                                         </div>
@@ -164,6 +164,13 @@
     </div>
 </div>
 
+<script>
+    function setAid(aid) {
+        console.log(aid);
+        window.localStorage.setItem("aid",aid);
+        alert(aid);
+    }
+</script>
 <!-- Mainly scripts -->
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -177,12 +184,7 @@
 <script src="js/vue.js"></script>
 <script src="navbar.js"></script>
 <script src="editor_article_manage.js"></script>
-<script>
-    function getaid(aid) {
-        console.log(aid);
-        window.localStorage.setItem("aid",aid);
-    }
-</script>
+
 </body>
 
 </html>
