--- a/classes/artifacts/news_release_system_war_exploded/editor_article_manage.html
+++ b/classes/artifacts/news_release_system_war_exploded/editor_article_manage.html
@@ -84,9 +84,9 @@
                                     <td>
                                         <div class="center-block">
                                             <button class="btn btn-default" data-toggle="modal" data-target="#publishModal" v-bind:data-aid="article.aid" v-show="article.state !== 'published'">上传</button>
-                                            <a class="btn btn-default"  v-on:click="setAid(article.aid)" href="editor.html" >编辑</a>
+                                            <a class="btn btn-default"  v-on:click="setAid(article.aid)" href="editor.html" v-show="article.state !== 'published'">编辑</a>
 
-                                            <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal"  v-bind:data-aid="article.aid" >删除</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal"  v-bind:data-aid="article.aid" v-show="article.state !== 'published'">删除</button>
                                         </div>
                                     </td>
                                 </tr>
