--- a/web/article_manage.html
+++ b/web/article_manage.html
@@ -84,8 +84,9 @@
                                     <td>
                                         <div class="center-block">
                                             <button class="btn btn-default" data-toggle="modal" data-target="#allowModal" v-bind:data-aid="article.aid" v-show="article.state === 'published'">允许上传</button>
-                                            <button class="btn btn-default" data-toggle="modal" data-target="#rejectModal" v-bind:data-aid="article.aid" v-show="article.state === 'checked'">退回稿件</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#rejectModal" v-bind:data-aid="article.aid" v-show="article.state === 'published'">退回稿件</button>
                                             <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal" v-bind:data-aid="article.aid" v-show="article.state === 'checked'">删除</button>
+                                            <button class="btn btn-default" data-toggle="modal" data-target="#deleteModal" v-on:click="checkhistory(article.aid)">查看修改历史信息</button>
                                         </div>
                                     </td>
                                 </tr>
@@ -157,7 +158,7 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
-                <button type="button" class="btn btn-primary" data-dismiss="modal" aria-label="Close">确认</button>
+                <button type="button" class="btn btn-primary" data-dismiss="modal" id="delete" aria-label="Close">确认</button>
             </div>
         </div>
     </div>
